# mcp-production-server

./: .dockerignore  .env.example  .env.example.production  Dockerfile  LICENSE  README.md  main.py  mcp-production.code-workspace  pyproject.toml
.github/workflows/: ci.yml
mcp_production/: __init__.py
mcp_server/: app.py  auth.py  loader.py  logging.py  main.py
mcp_server/modules/: __init__.py
mcp_server/modules/text/: __init__.py  helpers.py  prompts.py  resources.py  tools.py
mcp_server/settings/: __init__.py  config.py  logging.py
