[project]
name = "mcp-production"
version = "0.1.0"
description = "A production-ready, extensible template for building Model Context Protocol (MCP) servers in Python."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["mcp", "model-context-protocol", "server", "template"]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.9.4",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
]

