[project]
name = "mcp-server"
version = "0.1.0"
description = "A production-ready server for building Model Context Protocol (MCP) servers in Python."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["mcp", "model-context-protocol", "server"]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "fastmcp>=2.8.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
]

